# newsletter

./: .gitignore  Cargo.toml  README.md  test.patch
.github/workflows/: basic-checks.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscribe.rs  subscriptions.rs
